# UItrends

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/scripts/: bump_release_version.py
.github/workflows/: release.yml
app/: build.gradle.kts  lint.xml  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/vision/: README.md
app/src/main/cpp/: CMakeLists.txt  pretext_contour_internal.h  pretext_contour_math.cpp  pretext_geometry.cpp  pretext_geometry.h  pretext_geometry_jni.cpp  pretext_mask_contour.cpp  pretext_native_lock.cpp  pretext_native_lock.h  pretext_ncnn_yolo.cpp  pretext_ncnn_yolo.h  pretext_vision_jni.cpp  pretext_vision_orchestrator.cpp  pretext_vision_orchestrator.h  pretext_yuv_rgb.cpp  pretext_yuv_rgb.h
app/src/main/res/drawable/: avd_splash_catalog.xml  ic_brand_logo.xml  ic_brand_logo_1.xml  ic_brand_logo_2.xml  ic_brand_logo_3.xml  ic_brand_logo_4.xml  ic_brand_logo_monochrome.xml  ic_brand_logo_monochrome_2.xml  ic_brand_logo_monochrome_3.xml  ic_brand_logo_monochrome_4.xml  ic_demo_glass.xml  ic_demo_masonry.xml  ic_demo_pretext.xml  ic_demo_settings.xml  ic_launcher_background.xml  ic_launcher_background_dark.xml  ic_launcher_foreground.xml  ic_launcher_foreground_2.xml  ic_launcher_foreground_3.xml  ic_launcher_foreground_round.xml  ic_launcher_foreground_round_2.xml  ic_launcher_foreground_round_3.xml  ic_launcher_foreground_round_4.xml  ic_launcher_monochrome.xml  (+16 more)
app/src/main/res/drawable-night/: ic_brand_logo_2.xml  ic_launcher_foreground_4.xml  widget_hero_pretext_bg.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
release/: ads.properties.example  creator.properties  version.properties
release/whatsnew/: en-US.txt
scripts/: download_pretext_vision_assets.sh
(+292 files in other folders)
